@@ -150,14 +150,20 @@ class "IActionButton"
 
 	_IActionButton_WrapClickPre = [[
 		if button == "RightButton" then
-			if RootExpansion[self] then
-				RootExpansion[self] = nil
-				self:CallMethod("IActionHandler_UpdateExpansion", nil)
-			elseif not RootExpansion[self] then
-				if BranchHeader[self] then
-					RootExpansion[self] = true
-					Manager:RunFor(self, ShowBranch)
-					self:CallMethod("IActionHandler_UpdateExpansion", true)
+			if IsAltKeyDown() then
+				if self:GetAttribute("AutoGenerated") then
+					self:CallMethod("IActionHandler_SendToBlackList")
+				end
+			else
+				if RootExpansion[self] then
+					RootExpansion[self] = nil
+					self:CallMethod("IActionHandler_UpdateExpansion", nil)
+				elseif not RootExpansion[self] then
+					if BranchHeader[self] then
+						RootExpansion[self] = true
+						Manager:RunFor(self, ShowBranch)
+						self:CallMethod("IActionHandler_UpdateExpansion", true)
+					end
 				end
 			end
 		end
@@ -386,6 +392,15 @@ class "IActionButton"
 		IGAS:GetWrapper(self).__Expansion = flag and true or false
 	end
 
+	local function IActionHandler_SendToBlackList(self)
+		self = IGAS:GetWrapper(self)
+
+		if self.Item and self.Root.AutoActionTask then
+			_AutoGenItemBlackList[self.Item] = true
+			self.Root.AutoActionTask:RestartTask()
+		end
+	end
+
 	------------------------------------------------------
 	-- Method
 	------------------------------------------------------
@@ -504,6 +519,7 @@ class "IActionButton"
 				if num == 0 and self.AutoActionTask then
 					self.AutoActionTask:RemoveRoot(self)
 					self.AutoActionTask = nil
+					self:SetAutoGenAction(nil)
 				end
 				if num > 0 then
 					self:SetAttribute("type2", "custom")
@@ -527,6 +543,17 @@ class "IActionButton"
 		if self.UseBlizzardArt then
 			return Super.UpdateAction(self)
 		end
+	end
+
+	function SetAutoGenAction(self, kind, ...)
+		if kind then
+			self:SetAttribute("AutoGenerated", true)
+			self:SetAttribute("alt-type2", "custom")
+		else
+			self:SetAttribute("AutoGenerated", nil)
+			self:SetAttribute("alt-type2", nil)
+		end
+		return self:SetAction(kind, ...)
 	end
 
 	------------------------------------------------------
@@ -1101,6 +1128,7 @@ class "IActionButton"
 
 		-- callback from RestrictedEnvironment, maybe add some mechanism solve this later
 		IGAS:GetUI(self).IActionHandler_UpdateExpansion = IActionHandler_UpdateExpansion
+		IGAS:GetUI(self).IActionHandler_SendToBlackList = IActionHandler_SendToBlackList
 
 		Task.NoCombatCall(SetupActionButton, self)
 
@@ -1465,24 +1493,28 @@ class "AutoActionTask"
 		if self.UseReverseOrder then
 			for i = #_ContainerItemList, 1, -1 do
 				local itemID = _ContainerItemList[i]
-				local pass = true
-				if itemCls then
-					local cls, subclass = select(12, GetItemInfo(itemID))
-					pass = itemCls == cls and (not itemSubCls or subclass == itemSubCls)
-				end
-				if pass and (not filter or filter(itemID)) then
-					yield("item", itemID)
+				if not _AutoGenItemBlackList[itemID] then
+					local pass = true
+					if itemCls then
+						local cls, subclass = select(12, GetItemInfo(itemID))
+						pass = itemCls == cls and (not itemSubCls or subclass == itemSubCls)
+					end
+					if pass and (not filter or filter(itemID)) then
+						yield("item", itemID)
+					end
 				end
 			end
 		else
 			for _, itemID in ipairs(_ContainerItemList) do
-				local pass = true
-				if itemCls then
-					local cls, subclass = select(12, GetItemInfo(itemID))
-					pass = itemCls == cls and (not itemSubCls or subclass == itemSubCls)
-				end
-				if pass and (not filter or filter(itemID)) then
-					yield("item", itemID)
+				if not _AutoGenItemBlackList[itemID] then
+					local pass = true
+					if itemCls then
+						local cls, subclass = select(12, GetItemInfo(itemID))
+						pass = itemCls == cls and (not itemSubCls or subclass == itemSubCls)
+					end
+					if pass and (not filter or filter(itemID)) then
+						yield("item", itemID)
+					end
 				end
 			end
 		end
@@ -1572,18 +1604,18 @@ class "AutoActionTask"
 								root:GenerateBranch(cnt)
 								btn.Branch.Visible = btn.Visible
 								btn = btn.Branch
-								btn:SetAction(ty, target, detail)
+								btn:SetAutoGenAction(ty, target, detail)
 								cnt = cnt + 1
 								break
 							end
 						else
 							btn = btn.Branch
-							btn:SetAction(ty, target, detail)
+							btn:SetAutoGenAction(ty, target, detail)
 							cnt = cnt + 1
 							break
 						end
 					else
-						btn:SetAction(ty, target, detail)
+						btn:SetAutoGenAction(ty, target, detail)
 						cnt = cnt + 1
 						break
 					end
@@ -1602,12 +1634,12 @@ class "AutoActionTask"
 		if autoGen then
 			root = btn.Root
 			root:GenerateBranch(cnt > 1 and cnt - 1 or 1)
-			if cnt <= 1 then root.Branch:SetAction(nil) end
-			if cnt <= 0 then root:SetAction(nil) end
+			if cnt <= 1 then root.Branch:SetAutoGenAction(nil) end
+			if cnt <= 0 then root:SetAutoGenAction(nil) end
 		else
 			btn = btn.Branch
 			while btn do
-				btn:SetAction(nil)
+				btn:SetAutoGenAction(nil)
 				btn = btn.Branch
 			end
 		end
@@ -1619,11 +1651,11 @@ class "AutoActionTask"
 
 			if autoGen then
 				root:GenerateBranch(1)
-				root.Branch:SetAction(nil)
-				root:SetAction(nil)
+				root.Branch:SetAutoGenAction(nil)
+				root:SetAutoGenAction(nil)
 			else
 				while root do
-					root:SetAction(nil)
+					root:SetAutoGenAction(nil)
 					root = root.Branch
 				end
 			end
@@ -1696,6 +1728,16 @@ class "AutoActionTask"
 		self.TaskMark = (self.TaskMark or 0) + 1
 		if self.Roots and #self.Roots > 0 then
 			return self:StartTask()
+		end
+	end
+
+	__Static__()
+	__Arguments__{ AutoActionTaskType }
+	function RestartAllTaskByType(type)
+		for k, task in pairs(_AutoActionTask) do
+			if task.Type == type then
+				task:RestartTask()
+			end
 		end
 	end
 
@@ -1790,7 +1832,7 @@ end
 
 function _Recycle_IButtons:OnPush(btn)
 	btn:ClearAllPoints()
-	btn:SetAction(nil)
+	btn:SetAutoGenAction(nil)
 	btn.Brother = nil
 	btn.Branch = nil
 	btn.Header = nil
