@@ -1,3 +1,6 @@
+2016/8/02 v88
+	1. Use alt+right-mouse will put the auto-gen item buttons' item into black list, so it won't be generated.
+
 2016/8/02 v87
 	1. Fix the free mode for action bars, the action buttons would alsways be square.
 
